--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -64,7 +64,7 @@
     " - ②는 발생하는 패턴에서 약간의 변형이 발생하면 결정 직선을 넘어 오분류될 가능성이 큼\n",
     " - 하지만, 직선 ③은 두 부류 모두에 대해 여백<sup>margin</sup>이 커서 웬만한 변형은 오분류로 이어지지 않음\n",
     " - 따라서, ②에 비해 ③이 일반화 능력이 뛰어나고 결국 분류기 품질 면에서 더 좋다고 할 수 있음~!! \n",
-    "<img src=\"classifier.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/classifier.JPG\">"
    ]
   },
   {
@@ -84,7 +84,7 @@
     " 2. 하나의 초평면을 표현하는 식은 여럿 있다. 위 식에 0이 아닌 임의의 상수 c를 곱하여도 같은 초평면을 나타낸다\n",
     " 3. w는 초평면의 법선 벡터로서 <sup>normal vector</sup> 초평면의 방향을 나타내고, b는 위치를 나타낸다\n",
     " 4. 임의의 점 x에서 초평면까지의 거리는 다음과 같음\n",
-    "<img src=\"2.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/2.JPG\">"
    ]
   },
   {
@@ -104,22 +104,22 @@
     " <br> (그림에서 두 개의 결정 직선 ①과 ②는 이렇게 얻은 것)\n",
     " - <span style=\"color:Blue\"><b>여백(마진)<sup>margin</sup></b></span>은 직선으로부터 가장 가까운 샘플까지 거리의 두 배로 정의함\n",
     " - 가장 가까운 샘플을 <span style=\"color:Blue\"><b>서포트 벡터</b></span>라 부름\n",
-    "<img src=\"4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/4.jpg\">\n",
     "<br><br>\n",
     "* <b> 여백을 가장 크게 하는 결정 초평면의 방향, 즉 w를 찾는 것이 중요함~!! </b>\n",
     " - 최적을 찾기 위해서는 수학에 기대는 수밖에 없음~!!\n",
     "* 속이 찬 샘플은 직선으로부터 가장 가까운 것들로서 여백의 크기를 좌우하는 중요한 역할을 함 (<span style=\"color:Blue\"><b>서포트 벡터<sup>support vector</sup></b></span>)\n",
     "* 여백의 공식화\n",
-    "<img src=\"5.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/5.jpg\">\n",
     "* <b>조건부 최적화 문제<sup>constrained optimization problem</sup></b>\n",
     " <br> (모든 샘플을 옳게 분류한다는 조건 하에 최대 여백을 갖는 결정 초평면 찾는 문제)\n",
     " - 문제를 조건부 최적화 문제로 공식화\n",
     " <br> (조건 식에서 등호가 성립하는 샘플이 서포트 벡터)\n",
-    "<img src=\"6.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.jpg\">\n",
     "<br><br>\n",
     "* 위 식의 조건부 최적화 문제를 간단한 형태로 변형하고, 최소화 문제로 바꾸어 쓸 수 있음\n",
     " - 1/||w||의 최대화는 ||w||<sup>2</sup>의 최소화와 같음\n",
-    "<img src=\"7.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/7.jpg\">\n",
     "\n",
     "<br>\n",
     "+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
@@ -146,7 +146,7 @@
     "\n",
     "#### 라그랑제 함수로 표현한 조건부 최적화 문제는 보통 <span style=\"color:Blue\"><b>Karush-Kuhn-Tucker(KKT) 조건</b></span>을 이용하여 품\n",
     "* KKT 조건\n",
-    "<img src=\"8.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/8.jpg\">\n",
     " - 4번째 식에 의하면, 모든 샘플이 α<sub>i</sub>=0 또는 t<sub>i</sub>(w<sup>T</sup>x<sub>i</sub>+b)-1=0 이어야 함\n",
     " <br> α<sub>i</sub>≠0인 샘플이 <span style=\"color:Blue\"><b>서포트 벡터</b></span>임\n",
     " - 1번째 식에 의하면, 라그랑제 승수 α<sub>i</sub> 알면 w 구할 수 있음 \n",
@@ -155,17 +155,17 @@
     "\n",
     "#### 문제의 볼록 성질을 이용하여 풀기 쉬운 형태로 변환\n",
     "* 볼록 성질을 만족하는 조건부 최적화 문제는 <span style=\"color:Blue\"><b>Wolfe 듀얼<sup>dual</sup></b></span> 문제로 변형할 수 있음\n",
-    "<img src=\"10.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/10.jpg\">\n",
     "<br>\n",
     "* 위의 조건부 최적화 문제를 Wolfe 듀얼로 바꾸어 쓰면,\n",
-    "<img src=\"11.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/11.jpg\">\n",
     " - 부등식 조건이 등식 조건으로 바뀌어 문제가 훨씬 풀기 쉽기 때문에 문제 변형으로 얻은 것이 크다고 할 수 있음\n",
     "\n",
     "<br>\n",
     "++++++++\n",
     "#### <span style=\"color:Red\"><b>최종적으로,</b></span>  간단한 수식 정리를 하면\n",
     "++++++++\n",
-    "<img src=\"12.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/12.jpg\">\n",
     "* 흥미로운 특성들\n",
     " - 2차 함수의 최대화 문제\n",
     " - w와 b가 사라짐 (α를 찾는 문제가 되었음)\n",
@@ -178,7 +178,7 @@
    "metadata": {},
    "source": [
     "### <span style=\"color:Red\"><b>■ 조건부 최적화 문제의 변형 과정</b></span>\n",
-    "<img src=\"9.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/9.jpg\">"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "#### ■ [예제 5.2] 두 개의 샘플을 갖는 경우에 대한 문제의 풀이\n",
-    "<img src=\"ex. 5.2.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/ex. 5.2.jpg\">"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "source": [
     "#### ■ [예제 5.3] 세 개의 샘플을 갖는 경우에 대한 문제의 풀이\n",
-    "<img src=\"ex. 5.3.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/ex. 5.3.jpg\">"
    ]
   },
   {
@@ -239,11 +239,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.1.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.1.jpg\">\n",
     "\n",
     "** 그림 6.1 선형으로 분리되지 않는 데이터 집합 예제 네가지 **\n",
     "\n",
-    "<img src=\"6.2.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.2.jpg\">\n",
     "\n",
     "** 그림 6.2 프레임 A는 선형으로 분리 가능한 데이터를 보인 것인다. 프레임 B, C, D는 이 데이터를 두 개의 분류 항목으로 선형 분리가 가능한 경우들을 보인 것이다. **\n"
    ]
@@ -268,7 +268,7 @@
     " - 상수 b : 오프셋(offset)\n",
     " - w, b : 데이터를 위한 분리선 또는 초평면을 묘사하는 것\n",
     " \n",
-    "<img src=\"6.3.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.3.jpg\">\n",
     "\n",
     "** 그림 6.3 점 A에서 분리면까지의 거리는 분리면에 수직인 하나의 선에 의해 측정된다. **"
    ]
@@ -291,7 +291,7 @@
     " - 분리선을 위치시키기 위하여 분류기를 수행하고 결정할 때 마진은 다음 식에 의해 계산됨 \n",
     " - 목표 : 현재 w와 b의 값을 찾고 분류기를 정의하는 것\n",
     " <br>\n",
-    "<img src=\"수식 2.jpg\"> \n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 2.jpg\"> \n",
     " - 이 문제를 직접적으로 해결하는 것은 매우 어렵기 때문에, 더 쉽게 해결할 수 있는 다른 형태로 변환\n",
     "* <b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b>\n",
     " - <b>label*(w<sup>T</sup>x+b)</b>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
@@ -308,13 +308,13 @@
     " - <b>핵심) 두 가지 조건을 동시에 만족시키는 공통접선을 찾는 것</b>\n",
     "<br><br>\n",
     "* 최적화 함수의 표현\n",
-    "<img src=\"수식 4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 4.jpg\">\n",
     "<br><br>\n",
     "* <span style=\"color:Blue\"><b>여유 변수(slack variable)</b></span>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
-    "<img src=\"수식 5.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 5.jpg\">\n",
     " - 상수 c는 마진을 크게 만들고자 하는 우리의 목표와 대부분의 예제가 기능적인 1.0 이상의 마진을 갖도록 보장하는 것 사이에서 가중치를 조절\n",
     " - 상수 c는 최적화 코드의 인자이므로 변경할 수 있으며, 그에 따라 다른 결과를 얻을 수 있음\n",
     " - 먼저, 알파를 해결하면 알파의 관점에서 분리 초평면을 표현할 수 있음\n",
