--- a/doc/DeepLearning_from_Scratch/Chapter.6.ipynb
+++ b/doc/DeepLearning_from_Scratch/Chapter.6.ipynb
@@ -174,11 +174,11 @@
     "\n",
     "<br>\n",
     "\n",
-    "<img src=\"2.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/2.jpg\">\n",
     "\n",
     "* 이 함수는 '밥그릇'을 x축 방향으로 늘인 듯한 모습 (왼쪽)이고, 실제로 그 등고선은 오른쪽과 같이 x축 방향으로 늘린 타원 (오른쪽)으로 되어 있음\n",
     "\n",
-    "<img src=\"3.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/3.jpg\">\n",
     "\n",
     "* [식 6.2] 함수의 기울기를 그려보면,\n",
     " - 기울기는 y축 방향은 크고 x축 방향은 작다는 것이 특징\n",
@@ -188,7 +188,7 @@
     " - [식 6.2]가 최솟값이 되는 장소는 (x,y) = (0,0)이지만\n",
     " - [그림 6-2]가 보여주는 기울기 대부분은 (0,0) 방향을 가리키지 않는다는 것\n",
     "\n",
-    "<img src=\"4.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/4.jpg\">\n",
     "\n",
     "* [그림 6-1] 함수에 SGD 적용\n",
     " - 탐색 시작하는 장소(초깃값)는 (x,y) = (-7.0, 2.0)으로 시작\n",
@@ -196,7 +196,7 @@
     " - 상당히 비효율적인 움직임\n",
     " - <b> SGD의 단점은 비등방성 함수 (방향에 따라 성질, 즉 여기에서는 기울기가 달라지는 함수)에서는 탐색 경로가 비효율적이라는 것 </b>\n",
     " \n",
-    "<img src=\"5.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/5.jpg\">\n",
     "\n",
     "* (다음으로) SGD의 이러한 단점을 개선 및 SGD를 대체하는 세 가지 기법을 소개\n",
     " - 모멘텀\n",
